Implement Download CSV PDF Excel links

--- a/CRUDExample/appsettings.json
+++ b/CRUDExample/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": ""
+  },
+  "EPPlus": {
+    "ExcelPackage": {
+      "License": "NonCommercialPersonal:Luis Asanza"
+    }
   }
 }
