--- a/CRUDTests/CRUDTests.csproj
+++ b/CRUDTests/CRUDTests.csproj
@@ -21,6 +21,8 @@
   <ItemGroup>
     <ProjectReference Include="..\CRUDExample\CRUDExample.csproj" />
     <ProjectReference Include="..\Entities\Entities.csproj" />
+    <ProjectReference Include="..\Repositories\Repositories.csproj" />
+    <ProjectReference Include="..\RepositoryContracts\RepositoryContracts.csproj" />
     <ProjectReference Include="..\ServiceContracts\ServiceContracts.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
