Add cache. Create Benchmark. Include csp.

--- a/CRUDExample/appsettings.json
+++ b/CRUDExample/appsettings.json
@@ -3,6 +3,13 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "EventLog": {
+      "LogLevel": {
+        "Default": "Debug",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning"
+      }
     }
   },
   "AllowedHosts": "*",
