feat(logging): Add Serilog configuration with Console, Debug and MSSQL Sinks

--- a/CRUDExample/appsettings.json
+++ b/CRUDExample/appsettings.json
@@ -14,11 +14,40 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "",
+    "LoggingDb": ""
   },
   "EPPlus": {
     "ExcelPackage": {
       "License": "NonCommercialPersonal:Luis Asanza"
     }
+  },
+
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log.txt",
+          "rollingInterval": "Day",
+          "fileSizeLimitBytes": 1048576,
+          "rollOnFileSizeLimit": true
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "LoggingDb",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true
+        }
+      }
+    ]
   }
+
 }
