--- a/CRUDExample/appsettings.Development.json
+++ b/CRUDExample/appsettings.Development.json
@@ -4,5 +4,23 @@
       "Default": "Debug",
       "Microsoft.AspNetCore": "Information"
     }
+  },
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log.txt",
+          "rollingInterval": "Day",
+          "fileSizeLimitBytes": 1048576,
+          "rollOnFileSizeLimit": true
+        }
+      }
+    ]
   }
 }
