feat(logging): add Serilog Seq sink

--- a/CRUDExample/appsettings.json
+++ b/CRUDExample/appsettings.json
@@ -25,7 +25,7 @@
 
   "Serilog": {
     "MinimumLevel": "Information",
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq" ],
     "WriteTo": [
       {
         "Name": "Console"
@@ -46,8 +46,22 @@
           "tableName": "Logs",
           "autoCreateSqlTable": true
         }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341",
+          "bufferBaseFilename": "logs\\seq-buffer",
+          "apiKey": "Ak4sJwoOgBsCrOs0m1vq"
+        }
       }
-    ]
+    ],
+    "Enrich": [
+      "FromLogContext"
+    ],
+    "Properties": {
+      "Application": "CRUDExample"
+    }
   }
 
 }
