Add Serilog Logging Pipeline (Sinks, Enrichment) (#1)
* feat(logging): Add Serilog configuration with Console, Debug and MSSQL Sinks

* feat(logging): add Serilog Seq sink

* feat(logging): Enrich Serilog logs with user name

* feat(loggin): Enrich http request logs with IDiagnosticContext

* feat(logging): Fix unit tests. Sink only to InMemory when running tests. Create NullDiagnosticContext.

* feat(logging): Request diagnostic service instead of using Logger

* feat(logging): Remove Debug Sink. Comment out slow sinks. Add Action Filters for demonstration purposes.

--- a/CRUDExample/appsettings.json
+++ b/CRUDExample/appsettings.json
@@ -14,11 +14,64 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "",
+    "LoggingDb": ""
   },
   "EPPlus": {
     "ExcelPackage": {
       "License": "NonCommercialPersonal:Luis Asanza"
     }
+  },
+
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+
+    //Global minimum level
+    "MinimumLevel": {
+      "Default": "Verbose",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning",
+        "System": "Warning"
+      }
+    },
+
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+      //{
+      //  "Name": "File",
+      //  "Args": {
+      //    "path": "Logs/log.txt",
+      //    "rollingInterval": "Day",
+      //    "fileSizeLimitBytes": 1048576,
+      //    "rollOnFileSizeLimit": true
+      //  }
+      //},
+      //{
+      //  "Name": "MSSqlServer",
+      //  "Args": {
+      //    "connectionString": "LoggingDb",
+      //    "tableName": "Logs",
+      //    "autoCreateSqlTable": true
+      //  }
+      //},
+      //{
+      //  "Name": "Seq",
+      //  "Args": {
+      //    "serverUrl": "http://localhost:5341",
+      //    "bufferBaseFilename": "logs\\seq-buffer",
+      //    "apiKey": "Ak4sJwoOgBsCrOs0m1vq"
+      //  }
+      //}
+    ],
+    "Enrich": [
+      "FromLogContext"
+    ],
+    "Properties": {
+      "Application": "CRUDExample"
+    }
   }
+
 }
