--- a/CRUDExample/CRUDExample.csproj
+++ b/CRUDExample/CRUDExample.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Filters\AuthorizationFilters\" />
     <Folder Include="logs\" />
   </ItemGroup>
 
