feat(exceptionFIlter): Create a custom Request Logger to see incoming requests body. Implement a custom Exception handler for demostration purposes. Capture and Log errors using built-in UseExceptionHandler() middleware and IExceptionHandlerPathFeature in Error razor page. Add a new class library for Custom Exceptions.

--- a/CRUDExample/CRUDExample.csproj
+++ b/CRUDExample/CRUDExample.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Exceptions\Exceptions.csproj" />
     <ProjectReference Include="..\Repositories\Repositories.csproj" />
     <ProjectReference Include="..\RepositoryContracts\RepositoryContracts.csproj" />
     <ProjectReference Include="..\ServiceContracts\ServiceContracts.csproj" />
